# i3000

./: .clang-format  .editorconfig  .gitattributes  .gitignore  CMakeLists.txt  LICENSE
.github/: dependabot.yaml
.github/workflows/: build.yaml  check.yaml
components/: CMakeLists.txt
components/589AP16/: CMakeLists.txt
components/589AP16/include/589AP16/: model.hpp
components/589AP16/model/: 589AP16.pdsprj
components/589AP16/sources/: dllmain.cpp
components/589AP16/sources/589AP16/: model.cpp
components/589AP26/: CMakeLists.txt
components/589AP26/include/589AP26/: model.hpp
components/589AP26/model/: 589AP26.pdsprj
components/589AP26/sources/: dllmain.cpp
components/589AP26/sources/589AP26/: model.cpp
components/589IK01/: CMakeLists.txt
components/589IK01/model/: I3000_K589IK01.pdsprj
components/589IK01/sources/: dllmain.cpp
components/589IK02/: CMakeLists.txt
components/589IK02/include/: model.hpp
components/589IK02/model/: I3000_K589IK02.pdsprj
components/589IK02/sources/: dllmain.cpp
components/589IK03/: CMakeLists.txt
components/589IK03/model/: I3000_K589IK03.pdsprj
components/589IK03/sources/: dllmain.cpp
components/589IK14/: CMakeLists.txt
components/589IK14/include/: k589ik14.hpp
components/589IK14/model/: I3000_589IK14.pdsprj
components/589IK14/sources/: dllmain.cpp  k589ik14.cpp
components/589IR12/: CMakeLists.txt
components/589IR12/model/: 589IR12.pdsprj
components/589IR12/sources/: dllmain.cpp
include/i3000/: prelude.hpp
include/vsmsdk/: vdm.hpp  vdm11.hpp  vdm51.hpp  vdmpic.hpp  vsm.hpp
(+11 files in other folders)
